Use data object to return weather service client result