@@ -39,16 +39,14 @@ class WeatherServiceClientTest {
 
         public URI generateURL(double latitude, double longitude, LocalDate localDate) {
             String formattedDate = localDate.format(DateTimeFormatter.ISO_LOCAL_DATE);
-            String uriString = String.format(
-                    "http://%s:%d/weather?lat=%f&long=%f&date=%s",
-                    hostName, port, latitude, longitude, formattedDate
-            );
+            String uriString = "http://%s:%d/weather?lat=%f&long=%f&date=%s".formatted(
+                    hostName, port, latitude, longitude, formattedDate);
 
             return URI.create(uriString);
         }
 
-        public WeatherForecast parseWeatherForecast(HttpResponse<String> response) {
-            return new WeatherForecast(ZonedDateTime.parse("2022-05-09T12:00:00+00:00"), 32.0);
+        public Result parseWeatherForecast(HttpResponse<String> response) {
+            return new Result(ZonedDateTime.parse("2022-05-09T12:00:00+00:00"), 32.0);
         }
     }
 
@@ -66,14 +64,13 @@ class WeatherServiceClientTest {
     @Test
     void retrieveForecast_parsesWeatherServiceResponseIntoWeatherForecastModel() throws InterruptedException, IOException {
         var adapter = new FakeWeatherServiceAdapter(mockWebServer.getHostName(), mockWebServer.getPort());
-        var client = new WeatherServiceClient();
         var mockResponse = new MockResponse()
                 .setBody("{}")
                 .addHeader("Content-Type", "application/json");
         mockWebServer.enqueue(mockResponse);
         var date = LocalDate.of(2022, Calendar.SEPTEMBER, 6);
 
-        WeatherForecast result = client.retrieveForecast(adapter, date);
+        var result = client.retrieveForecast(adapter, 53.5623857, 9.9595470, date);
 
         assertEquals(ZonedDateTime.parse("2022-05-09T12:00:00+00:00"), result.getTimestamp());
         assertEquals(32.0, result.getTemperature());
